--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+ = 4.18.0 =
+
+ - Remove reverse engineered portion of --analyze function, replace with Roku SCA
+
  = 4.17.1 =
 
  - Remove requirement for project default in config
