--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+ = 4.19.0 =
+
+ - Add pkg file size check. Package command now fails if the pkg file is
+ larger then 4kb
+
  = 4.18.0 =
 
  - Remove reverse engineered portion of --analyze function, replace with Roku SCA
